--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master  # Changed from 'main' to 'master'
+      - master
 
 jobs:
   build-and-deploy:
@@ -15,18 +15,20 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.8  # Specify the exact version
-          bundler-version: '2.4.22'  # Specify a compatible Bundler version
+          ruby-version: 2.7.8
+          bundler: '2.4.22'
+
+      - name: Update RubyGems and install dependencies
+        run: |
+          gem update --system
+          gem install ffi -v 1.17.0
+          gem install jekyll sass jekyll-minifier jekyll-sitemap
+          bundle install
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.19.1'  # Updated to a more recent LTS version
-
-      - name: Install Ruby dependencies
-        run: |
-          gem install jekyll sass jekyll-minifier jekyll-sitemap
-          bundle install
+          node-version: '18.19.1'
 
       - name: Install Node.js dependencies
         run: npm install
