--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-name: Maham F Khan
-title: Maham F Khan | Your Professional Title
+name: Maham Faisal Khan
+title: Maham F. Khan | Data scientist
 description: Your personal description and professional focus
 url: https://mahamfkhan.github.io/cv/
 baseurl: '/cv'
