--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -15,7 +15,7 @@ data-science:
 
 front-end:
   - item: D3
-  - item: L<sup>A</sup>T<sub>E</sub>X
+  - item: <img src="path_to_latex_logo.png" alt="LaTeX" style="height: 1em; vertical-align: middle;">
   - item: Streamlit
   - item: Plotly & dash  
 
