--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,44 +1,20 @@
-- company: Upstatement
-  url: https://www.upstatement.com/
-  time: May 2018 - Present
-  position: Engineer
+- company: YouView TV Ltd.
+  url: https://www.youview.com/
+  time: July 2024 - Present
+  position: Senior Insights Data Scientist
 
-- company: Scout
-  url: https://web.northeastern.edu/scout/
-  time: Jan - June 2018
-  position: Studio Developer
+- company: DataCamp
+  url: https://datacamp.com/
+  time: April - July 2024
+  position: Senior Data Science Content Developer
 
-- company: Apple Music
-  url: https://www.apple.com/music/
-  time: July - Dec 2017
-  position: UI Engineer Co-op
+- company: World Bank
+  url: https://worldbank.org/
+  time: Jan 2020 - April 2024
+  position: Data Scientist
 
-- company: Scout
-  url: https://web.northeastern.edu/scout/
-  time: Jan - June 2017
-  position: Studio Developer
+- company: Wayfair
+  url: https://wayfair.com/
+  time: Mar - Oct 2020
+  position: Senior Data Analyst (People Analytics)
 
-- company: Starry
-  url: https://starry.com/
-  time: July - Dec 2016
-  position: Software Engineer Co-op
-
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Jan - May 2016
-  position: HCI Teaching Assistant
-
-- company: NU Women in Tech
-  url: http://nuwit.ccs.neu.edu/
-  time: Jan 2016 - May 2017
-  position: President & Web Chair
-
-- company: MullenLowe U.S.
-  url: https://us.mullenlowe.com/
-  time: July - Dec 2015
-  position: Creative Technologist Co-op
-
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Mar - May 2015
-  position: HCI Research Assistant
